--- a/.development.env
+++ b/.development.env
@@ -1,4 +1,4 @@
-MONGO_INITDB_ROOT_USERNAME=admin
-MONGO_INITDB_ROOT_PASSWORD=admin
-MONGO_LOGIN=admin
-MONGO_PASSWORD=admin
+#MONGO_INITDB_ROOT_USERNAME=admin
+#MONGO_INITDB_ROOT_PASSWORD=admin
+#MONGO_LOGIN=admin
+#MONGO_PASSWORD=admin
