--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "trailingComma": "all",
+  "tabWidth": 4,
   "singleQuote": true,
-  "trailingComma": "all"
+  "printWidth": 140,
+  "bracketSpacing": false,
+  "semi": true
 }
